tests/ui/loops/loop-properly-diverging-2.stderr
error[E0308]: mismatched types
  --> $DIR/loop-properly-diverging-2.rs:2:23
   |
LL |   let x: i32 = loop { break };
   |                       ^^^^^
   |                       |
   |                       expected `i32`, found `()`
   |                       help: give it a value of the expected type: `break 42`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
